--- a/date16/index.html
+++ b/date16/index.html
@@ -23,7 +23,7 @@
 </a> -->
 <iframe name="iframes" frameborder="0" width="600px" height="500px"></iframe>
 <a href="https://en.wikipedia.org/wiki/HTML" target="iframes"><img src="./assets/html.jpeg"></a>
-<a href="https://en.wikipedia.org/wiki/HTML" target="iframes"><img src="./assets/css.png" width="280"></a>
-<a href="https://en.wikipedia.org/wiki/HTML" target="iframes"><img src="./assets/js.png" width="300" height="170" ></a>
+<a href="https://en.wikipedia.org/wiki/CSS" target="iframes"><img src="./assets/css.png" width="280"></a>
+<a href="https://en.wikipedia.org/wiki/JavaScript" target="iframes"><img src="./assets/js.png" width="300" height="170" ></a>
 </body>
 </html>
