--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <a href="7-5-25.html">Task -3</a><br>
     <a href="8-5-25.html">Task -4</a><br>
     <a href="10-5.25.html">Task -5</a><br>
-    <a href="../frontenD/date11">Task -5</a><br>
+<!--     <a href="../frontenD/date11">Task -5</a><br> -->
 </body>
 </html>
